# publication-system

./: .env.sample  .gitignore  README.md  docker-compose.yml  et --soft HEAD~1  package-lock.json  package.json
backend/: .env.sample  Dockerfile  add_initial_types.py  config.py  create_admin.py  main.py  publication_backup.sql  publication_backup2.sql  publication_dbback.sql  pyproject.toml  python seed_publication_types.py  requirements.txt  seed_database.py
backend/app/: __init__.py  analytics.py  api.py  extensions.py  middleware.py  models.py  report_generator.py  report_generator_docx.py  routes.py  server.py  text.txt  utils.py  вапвапвап.txt
backend/config/: settings.py
backend/core/: container.py
backend/infrastructure/: database.py  keycloak_service.py  minio.py  minio_service.py
backend/mappers/: identity_mapper.py
backend/migrations/: env.py
backend/models/: __init__.py  author.py  author_publication.py  comment.py  department.py  journal.py  journal_publication.py  plan.py  plan_comment.py  plan_entry.py  plan_entry_publication.py  plan_status.py  plan_status_temp.py  publication.py  publication_comment.py  publication_status.py  publication_status_temp.py  publication_type.py  publication_type_aliases.py  publisher.py  tags.py  tags_publication.py  university_department.py  user.py
backend/repositories/: author_repository.py  plan_repository.py  publication_comments.py
backend/services/: author_service.py  plan_service.py  publication_service.py  publication_storage.py  worker_service.py
backend/tests/: conftest.py
backend_old/: run.py  (+1 more)
(+129 files in other folders)
