[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "kafka>=1.3.5",
    "minio>=7.2.20",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
